--- a/src/views/layouts/UserCorner/user-corner.css
+++ b/src/views/layouts/UserCorner/user-corner.css
@@ -1,4 +1,13 @@
-.user-corner_greeting {
-    margin-right: 5px;
+.user-corner {
+    display: flex;
+    align-items: center;
+}
+
+.user-corner__greeting {
+    margin-right: 15px;
     font-size: 14px;
+}
+
+.user-corner__avatar-container {
+    cursor: pointer;
 }
