--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,17 @@ body {
   font-family: "Roboto", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(245, 245, 245);
+  background: url(https://source.unsplash.com/collection/827743) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 .page {
   width: 600px;
   margin: 40px auto;
   background-color: white;
-  box-shadow: 0 0 7px 0 rgb(175, 175, 175);
 }
 
 .page-content {
